@@ -7,6 +7,10 @@
 * If standard output is not a terminal device, the output of the 'folders'
   command applied to an IMAP account is no longer arranged into columns.
 * The new '-R' option causes all folders to be opened read-only.
+* When the From address was changed with '~H', the value obtained from the
+  'from' variable was still used for the SMTP transfer, for generating the
+  Message-Id, and for S/MIME signing. This has been fixed; the changed
+  address is now used throughout.
 * When reading header fields from a terminal, the input buffer could
   overflow by one byte (Patch by Ulf Harnhammar).
 * Only applicable if Mozilla NSS is used for SSL support: If the certificate
